Refactor Gradle build scripts and add JMH benchmarks from JOML-CI/joml-bench
also use Java 19 for experimental builds